Fixed alignment and other stuff

--- a/app/styles/components/comments.css
+++ b/app/styles/components/comments.css
@@ -39,7 +39,7 @@
 .disqus-comment-thread-container {
     position: absolute;
     top: 0px;
-    bottom: calc(var(--footer-height) - var(--showcase-footer-overlap));
+    bottom: var(--footer-height);
     left: 0px;
     right: 0px;
     background-color: color(var(--black) alpha(90%));
@@ -53,7 +53,7 @@
     position: absolute;
     padding: 5px;
     top: 30px;
-    bottom: calc(var(--footer-height) - var(--showcase-footer-overlap));
+    bottom: var(--footer-height);
     left: 0px;
     right: 0px;
     overflow-y: scroll;
