--- a/app/styles/components/document.css
+++ b/app/styles/components/document.css
@@ -113,6 +113,32 @@ h3 {
     padding-bottom: 0;
     padding-left: 35px;
     padding-right: 52px;
+
+    >a {
+        position: absolute;
+        left: 15px;
+        margin-top: 4px;
+        visibility: hidden;
+    }
+     /*** A couple model sections at the start lack a subheading, so don't adjust the a to match the ***/
+    &.no-subheading {
+        >a {
+            margin-top: 0;
+        }
+    }
+    &:hover {
+        &.no-subheading {
+            >a {
+                margin-top: 0;
+            }
+        }
+        >a {
+            position: absolute;
+            left: 15px;
+            margin-top: 4px;
+            visibility: visible;
+        }
+    }
 }
 
 #header {
@@ -135,19 +161,16 @@ h3 {
     font-size: var(--h5-font-size);
 }
 
-.model-section {
-    >a {
-        position: absolute;
-        left: 15px;
-        margin-top: 4px;
-    }
-}
 .scene-circles {
 }
 
 .toc-scene {
     position: absolute;
     right: 0px;
+    margin-top: 4px;
+    &.no-subheading {
+        marginp-top: 0;
+    }
     margin-right: 22px;
     height: 10px;
     width: 10px;
