--- a/app/styles/containers/showcase.css
+++ b/app/styles/containers/showcase.css
@@ -13,7 +13,7 @@
     position: absolute;
     top: calc(var(--header-height) - 20px);
     height: 32px;
-    right: var(--model-3d-document-overlap);
+    right: 5px;
     &:hover {
          cursor: pointer;
     }
@@ -163,6 +163,11 @@
         &:hover {
             cursor: pointer;
         }
+    }
+}
+.model-credits {
+    >a {
+        color: var(--gray);
     }
 }
 
